[MOD] translator is modified to support ssl tcp
Signed-off-by: JangryulKim <urmydata@snu.ac.kr>