@@ -37,6 +37,7 @@ import org.snu.cse.cap.translator.structure.device.connection.ConstrainedSerialC
 import org.snu.cse.cap.translator.structure.device.connection.DeviceConnection;
 import org.snu.cse.cap.translator.structure.device.connection.InvalidDeviceConnectionException;
 import org.snu.cse.cap.translator.structure.device.connection.ProtocolType;
+import org.snu.cse.cap.translator.structure.device.connection.SSLTCPConnection;
 import org.snu.cse.cap.translator.structure.device.connection.SerialConnection;
 import org.snu.cse.cap.translator.structure.device.connection.TCPConnection;
 import org.snu.cse.cap.translator.structure.device.connection.UDPConnection;
@@ -81,6 +82,7 @@ import hopes.cic.xml.MulticastGroupType;
 import hopes.cic.xml.MulticastPortType;
 import hopes.cic.xml.NetworkType;
 import hopes.cic.xml.PortMapType;
+import hopes.cic.xml.SSLTCPConnectionType;
 import hopes.cic.xml.SerialConnectionType;
 import hopes.cic.xml.TCPConnectionType;
 import hopes.cic.xml.TaskLibraryConnectionType;
@@ -320,6 +322,19 @@ public class Application {
 			device.putConnection(connection);
 		}
 	}
+
+	private void putSSLTCPConnectionsOnDevice(Device device, DeviceConnectionListType connectionList) {
+		if (connectionList.getSSLTCPConnection() == null) {
+			return;
+		}
+		for (SSLTCPConnectionType connectionType : connectionList.getSSLTCPConnection()) {
+			SSLTCPConnection connection = null;
+			connection = new SSLTCPConnection(connectionType.getName(), connectionType.getRole().toString(),
+					connectionType.getIp(), connectionType.getPort().intValue(), connectionType.getCaPublicKey(),
+					connectionType.getPublicKey(), connectionType.getPrivateKey());
+			device.putConnection(connection);
+		}
+	}
 	
 	private void putSupportedConnectionTypeListOnDevice(Device device, DeviceConnectionListType connectionList) 
 	{
@@ -346,6 +361,10 @@ public class Application {
 		{
 			device.putSupportedConnectionType(DeviceCommunicationType.UDP);
 		}
+		if (connectionList.getSSLTCPConnection() != null && connectionList.getSSLTCPConnection().size() > 0) {
+			device.putSupportedConnectionType(DeviceCommunicationType.SSL_TCP);
+			device.putSupportedConnectionType(DeviceCommunicationType.TCP);
+		}
 	}
 
 	private void putConnectionsOnDevice(Device device, DeviceConnectionListType connectionList)
@@ -353,6 +372,7 @@ public class Application {
 		putSerialConnectionsOnDevice(device, connectionList);
 		putTCPConnectionsOnDevice(device, connectionList);
 		putSupportedConnectionTypeListOnDevice(device, connectionList);
+		putSSLTCPConnectionsOnDevice(device, connectionList);
 	}
 
 	private Connection findConnection(String deviceName, String connectionName) throws InvalidDeviceConnectionException
@@ -394,6 +414,8 @@ public class Application {
 						slave = findConnection(slaveType.getDevice(), slaveType.getConnection());
 						deviceConnection.putMasterToSlaveConnection(master, slaveType.getDevice(), slave);
 						deviceConnection.putSlaveToMasterConnection(slaveType.getDevice(), slave, master);
+
+
 					}
 				} catch (InvalidDeviceConnectionException e) {
 					// TODO Auto-generated catch block
@@ -456,6 +478,7 @@ public class Application {
 				if(device_metadata.getConnections() != null)
 				{
 					putConnectionsOnDevice(device, device_metadata.getConnections());
+
 				}
 
 				if(device_metadata.getModules() != null)
@@ -534,7 +557,8 @@ public class Application {
 			break;
 		case TCP:
 			channel.setRemoteMethodType(RemoteCommunicationType.TCP);
-
+		case SSL_TCP:
+			channel.setRemoteMethodType(RemoteCommunicationType.SSL_TCP);
 			break;
 		default:
 			throw new UnsupportedOperationException();
@@ -543,7 +567,8 @@ public class Application {
 
 	private void setChannelConnectionRoleType(Channel channel, ConnectionPair connectionPair, String taskName)
 	{
-		if(connectionPair.getMasterConnection().getProtocol() == ProtocolType.TCP) {
+		if (connectionPair.getMasterConnection().getProtocol() == ProtocolType.TCP
+				|| connectionPair.getMasterConnection().getProtocol() == ProtocolType.SSL_TCP) {
 			if(connectionPair.getMasterDeviceName().equals(taskName) == true) {
 				channel.setConnectionRoleType(ConnectionRoleType.SERVER);
 			}
@@ -746,7 +771,7 @@ public class Application {
 			key = currentPort.getPortKey();
 			if(device.getPortKeyToIndex().containsKey(key) == false)
 			{
-				device.getPortKeyToIndex().put(key, new Integer(device.getPortList().size()));
+				device.getPortKeyToIndex().put(key, Integer.valueOf(device.getPortList().size()));
 				device.getPortList().add(currentPort);
 
 			}
@@ -782,42 +807,66 @@ public class Application {
 	private void setSocketIndexFromTCPConnection(Channel channel, Device targetDevice, ConnectionPair connectionPair) throws InvalidDeviceConnectionException
 	{
 		int index = 0;
-		TCPConnection connection = null;
-		ArrayList<TCPConnection> connectionList = null;
+		TCPConnection tcpConnection = null;
+		ArrayList<TCPConnection> tcpConnectionList = null;
+		SSLTCPConnection sslTcpconnection = null;
+		ArrayList<SSLTCPConnection> sslTcpConnectionList = null;
 
-		switch(channel.getRemoteMethodType())
-		{
+		switch (channel.getRemoteMethodType()) {
 		case TCP:
-			switch(channel.getConnectionRoleType())
-			{
+			switch (channel.getConnectionRoleType()) {
 			case SERVER:
-				connectionList = targetDevice.getTcpServerList();
-				connection = (TCPConnection) connectionPair.getMasterConnection();
+				tcpConnectionList = targetDevice.getTcpServerList();
+				tcpConnection = (TCPConnection) connectionPair.getMasterConnection();
 				break;
 			case CLIENT:
-				connectionList = targetDevice.getTcpClientList();
-				connection = (TCPConnection) connectionPair.getSlaveConnection();
+				tcpConnectionList = targetDevice.getTcpClientList();
+				tcpConnection = (TCPConnection) connectionPair.getSlaveConnection();
 				break;
 			default:
 				throw new InvalidDeviceConnectionException();
 			}
+
+			tcpConnection.incrementChannelAccessNum();
+
+			for (index = 0; index < tcpConnectionList.size(); index++) {
+				TCPConnection curConnection = tcpConnectionList.get(index);
+
+				if (curConnection.getName().equals(tcpConnection.getName()) == true) {
+					// same connection name
+					channel.setSocketInfoIndex(index);
+					break;
+				}
+			}
+			break;
+		case SSL_TCP:
+			switch (channel.getConnectionRoleType()) {
+			case SERVER:
+				sslTcpConnectionList = targetDevice.getSslTcpServerList();
+				sslTcpconnection = (SSLTCPConnection) connectionPair.getMasterConnection();
+				break;
+			case CLIENT:
+				sslTcpConnectionList = targetDevice.getSslTcpClientList();
+				sslTcpconnection = (SSLTCPConnection) connectionPair.getSlaveConnection();
+				break;
+			default:
+				throw new InvalidDeviceConnectionException();
+			}
+
+			sslTcpconnection.incrementChannelAccessNum();
+
+			for (index = 0; index < sslTcpConnectionList.size(); index++) {
+				SSLTCPConnection curConnection = sslTcpConnectionList.get(index);
+
+				if (curConnection.getName().equals(sslTcpconnection.getName()) == true) {
+					// same connection name
+					channel.setSocketInfoIndex(index);
+					break;
+				}
+			}
 			break;
 		default:
 			throw new InvalidDeviceConnectionException();
-		}
-
-		connection.incrementChannelAccessNum();
-
-		for(index = 0 ; index < connectionList.size(); index++)
-		{
-			TCPConnection tcpConnection = connectionList.get(index);
-
-			if(tcpConnection.getName().equals(connection.getName()) == true)
-			{
-				// same connection name
-				channel.setSocketInfoIndex(index);
-				break;
-			}
 		}
 	}
 
@@ -968,7 +1017,8 @@ public class Application {
 			setSocketIndexFromConstrainedSerialConnection(channel, targetDevice, connectionPair);
 			break;
 		case LINUX:
-			if(connectionPair.getMasterConnection().getProtocol() == ProtocolType.TCP) {
+			if (connectionPair.getMasterConnection().getProtocol() == ProtocolType.TCP
+					|| connectionPair.getMasterConnection().getProtocol() == ProtocolType.SSL_TCP) {
 				setSocketIndexFromTCPConnection(channel, targetDevice, connectionPair);
 			}
 			else {
